--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site Settings
 lang: en
-title: Bulma Clean Theme
+title: Hyeon's Portfolio
 tagline: Bulma Clean Theme
 email: your-email@domain.com
 description: >
   The demo site for Bulma Clean Theme, made for Jekyll and GitHub pages websites
 baseurl: "/bulma-clean-theme"
-url: "https://www.csrhymes.com"
+url: "https://bhyeon1.github.io"
 permalink: pretty
 #favicon: /path/to/favicon.png
 gh_sponsor: chrisrhymes
