--- a/.github/workflows/jekyll-build-deploy.yml
+++ b/.github/workflows/jekyll-build-deploy.yml
@@ -3,7 +3,6 @@ name: Build and Deploy Jekyll site to Pages
 on:
   push:
     branches: [ main ]  # ✅ 여기를 main 으로 수정
-
   workflow_dispatch:
 
 permissions:
@@ -18,31 +17,37 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Ruby
+OAOAOA    steps:
+OAOAOA      - name: Checkout
+OAOAOA        uses: actions/checkout@v4
+
+OAOAOA      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
-          cache-version: 0
+
+      - name: Install dependencies  # ✅ 추가된 부분
+        run: bundle install
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: Build with Jekyll
+
+OAOAOA      - name: Build with Jekyll
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
-          JEKYLL_ENV: production
-      - name: Upload artifact
+OAOAOA          JEKYLL_ENV: production
+
+OAOAOA      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-  deploy:
+OAOAOA  deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-OAOAOA    needs: build
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
