--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@
       link: /projects/game_project/
     - name: Multi Sensing Watch
       link: /projects/Multi_Sensing_Watch/
+    - name: RRC Filter
+      link: /projects/rrc_filter/
     - name: Microwave system
       link: /projects/Microwave/
     - name: AI Parking Lot
